# gtk-widgets

./: Glade practice.glade~  README.md
GTK Widget using Template/: Readme.md  makefile  template_app
GTK Widget using Template/src/: main.c
Gtk Widget Illustration/: Readme.md  demo.gresources.xml  demowindow.c  demowindow.h  demowindow.ui  main.c  meson.build
basic-window/: Readme.md  simpleWindow  simpleWindow.c
hello world/: Readme.md  main.c  window_main.glade
